--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,11 +10,12 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  
 }
 
 body {
   font-family: sans-serif;
-  background-color: #f9fbfd;
+  background: linear-gradient(#17439b, #4f5595);
 }
 
 .wrapper {
@@ -29,9 +30,11 @@ header {
   padding-top: 0px;
   color: hsl(206, 17%, 28%);
 }
-
+h1, h2 {
+  color: hsl(0, 0%, 100%);
+}
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background: linear-gradient(#4f5595, #17439b );
   border-radius: 5px;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
@@ -46,7 +49,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #91b2d3;
   height: 2px;
 }
 
@@ -62,7 +65,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background:  #91b2d3;
   height: 2px;
 }
 
@@ -74,7 +77,7 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: rgb(4, 15, 74);
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
